@@ -1,0 +1,24 @@
+source 'http://rubygems.org'
+
+gem "sinatra", ">= 1.0.0"
+gem "http_router", ">= 0.2.1"
+gem "thor", ">= 0.13.0"
+gem "activesupport", "<= 2.3.8", :require => 'active_support'
+gem "shoulda", ">= 2.10.3"
+gem "i18n", "0.4.1"
+gem "mail", ">= 2.2.0"
+gem "builder", ">= 2.1.2"
+
+group :db do
+  gem "dm-core", ">= 0.10.2"
+  gem "dm-validations", ">= 0.10.2"
+  gem "dm-aggregates", ">= 0.10.2"
+  gem "data_objects", ">= 0.10.2"
+  gem "do_sqlite3", ">= 0.10.2"
+end
+
+gem "rake",  ">= 0.8.7"
+gem "mocha", ">= 0.9.8"
+gem "rack-test", ">= 0.5.0"
+gem "webrat", ">= 0.5.1"
+gem "haml", ">= 2.2.22"
