@@ -1,10 +1,9 @@
-require 'rubygems'
+require File.expand_path('../../../load_paths', __FILE__)
 require 'test/unit'
 require 'shoulda'
 require 'mocha'
 require 'rack/test'
 require 'webrat'
-
 require 'padrino-cache'
 
 class Test::Unit::TestCase
