@@ -1,18 +1,10 @@
-require 'rubygems'
+require File.expand_path('../../../load_paths', __FILE__)
 require 'test/unit'
 require 'shoulda'
 require 'mocha'
 require 'rack/test'
 require 'webrat'
 require 'thor/group'
-
-# We try to load the vendored padrino-core if exist
-%w(core).each do |lib|
-  if File.exist?(File.dirname(__FILE__) + "/../../padrino-#{lib}/lib")
-    $:.unshift File.dirname(__FILE__) + "/../../padrino-#{lib}/lib"
-  end
-end
-
 require 'padrino-gen'
 require 'padrino-core/support_lite'
 
@@ -32,7 +24,7 @@ class Test::Unit::TestCase
     Time.stubs(:now).returns(time)
     return time
   end
-  
+
   # generate(:controller, 'DemoItems', '-r=/tmp/sample_project')
   def generate(name, *params)
     "Padrino::Generators::#{name.to_s.camelize}".constantize.start(params)
