@@ -1,17 +1,9 @@
-require 'rubygems'
+require File.expand_path('../../../load_paths', __FILE__)
 require 'test/unit'
 require 'shoulda'
 require 'mocha'
 require 'rack/test'
 require 'webrat'
-
-# We try to load the vendored padrino-core if exist
-%w(core).each do |lib|
-  if File.exist?(File.dirname(__FILE__) + "/../../padrino-#{lib}/lib")
-    $:.unshift File.dirname(__FILE__) + "/../../padrino-#{lib}/lib"
-  end
-end
-
 require 'padrino-helpers'
 
 # We need some extension for do our tests
