@@ -1,20 +1,11 @@
 ENV['PADRINO_ENV'] = 'test'
 PADRINO_ROOT = File.dirname(__FILE__) unless defined? PADRINO_ROOT
 
-require 'rubygems'
+require File.expand_path('../../../load_paths', __FILE__)
 require 'test/unit'
 require 'shoulda'
 require 'mocha'
 require 'rack/test'
-require 'sinatra/base'
-
-# We try to load the vendored padrino-core if exist
-%w(core).each do |lib|
-  if File.exist?(File.dirname(__FILE__) + "/../../padrino-#{lib}/lib")
-    $:.unshift File.dirname(__FILE__) + "/../../padrino-#{lib}/lib"
-  end
-end
-
 require 'padrino-core'
 require 'padrino-mailer'
 
