@@ -1,7 +1,6 @@
-require 'rubygems'
+require File.expand_path('../../../load_paths', __FILE__)
 require 'test/unit'
 require 'shoulda'
-
 require 'padrino'
 
 class Test::Unit::TestCase
