@@ -2,6 +2,7 @@
 
 == 0.9.11 (Unreleased)
 
+* Added bundler support also for testing [Thanks to Ryanfitz]
 * Updated I18n dependency to version > 0.4.0
 * Padrino now uses http_router instead of usher to handle url routing
 * Reorganized a bit ours "servers"
